# leakcanary

./: .editorconfig  .gitignore  .travis.yml  404.html  CHANGELOG.md  LICENSE.txt  README-2.0.md  README.md  SUPPORT.md  asdfasd  build.gradle  build.gradle.kts  checkstyle.xml  detekt-config.yml  espresso-checks.sh  gradle.properties  graphviz.dominators.main.kts  graphviz.views.dominators.main.kts  graphviz.views.main.kts  index.html  mkdocs.yml  renovate.json  settings.gradle  settings.gradle.kts  shark-ai-investigate.sh  shark-cli.sh  sitemap.xml
.buildscript/: deploy_snapshot.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  SUPPORT.md
Migrating-to-LeakCanary-2.0/: index.html
android-fast-dump/: .clang-format  .gitignore  build.gradle  consumer-proguard-rules.pro  gradle.properties
android-fast-dump/src/main/cpp/: CMakeLists.txt  elf_reader.cc  fast_dump.cc  fast_dump.cpp  klog.h  kwai_dlfcn.cc  kwai_dlfcn.cpp  kwai_dlfcn.h
android-fast-dump/src/main/cpp/include/: elf_reader.h  elf_wrapper.h  fast_dump.h  klog.h  kwai_dlfcn.h  macros.h  map_util.h
android-fast-dump/src/main/cpp/lzma/: 7z.h  7zAlloc.c  7zAlloc.h  7zArcIn.c  7zBuf.h  7zCrc.c  7zCrc.h  7zCrcOpt.c  7zDec.c  7zFile.c  7zFile.h  7zStream.c  7zTypes.h  7zVersion.h  Aes.c  Aes.h  AesOpt.c  Alloc.c  Alloc.h  Android.bp  Bcj2.c  Bcj2.h  Bcj2Enc.c  Bra.c  Bra.h  Bra86.c  BraIA64.c  CMakeLists.txt  Compiler.h  CpuArch.c  CpuArch.h  Delta.c  Delta.h  DllSecur.c  DllSecur.h  LzFind.c  LzFind.h  LzFindMt.c  LzFindMt.h  LzHash.h  (+41 more)
api/: index.html  package-list
assets/: adaptative_icon.sketch  vector_icon.afdesign
blog-articles/: index.html
changelog/: index.html
code_of_conduct/: index.html
config/: detekt-config.yml
contributing/: index.html
dev-env/: index.html
docs/: Migrating-to-LeakCanary-2.0.md  blog-articles.md  changelog.md  code_of_conduct.md  contributing.md  dev-env.md  faq.md  fundamentals-fixing-a-memory-leak.md  fundamentals-how-leakcanary-works.md  fundamentals.md  getting_started.md  getting_started.md.  how_to_help.md  index.md  leakcanary-for-releases.md  recipes.md  recorded-presentations.md  releasing.md  requirements.txt  shark.md  support.md  ui-tests.md  upgrading-to-leakcanary-2.0.md  uploading.md
duck-tape-android/: consumer-proguard-rules.pro  gradle.properties
faq/: index.html
fast-dump/: .clang-format  gradle.properties
fast-dump/src/main/cpp/: CMakeLists.txt
fundamentals/: index.html
fundamentals-fixing-a-memory-leak/: index.html
fundamentals-how-leakcanary-works/: index.html
getting_started/: index.html
gradle/: checkstyle.gradle  gradle-mvn-push.gradle  libs.versions.toml
hooks/: pre-push
how_to_help/: index.html
leakcanary-analyzer/: build.gradle  gradle.properties
leakcanary-analyzer-core/: build.gradle  gradle.properties
leakcanary-analyzer-experimental/: build.gradle  gradle.properties
leakcanary-analyzer-perflib/: build.gradle  gradle.properties
leakcanary-android/: build.gradle  build.gradle.kts  consumer-proguard-rules.pro  gradle.properties
leakcanary-android-benchmark/: build.gradle  gradle.properties
leakcanary-android-core/: build.gradle  build.gradle.kts  consumer-proguard-rules.pro  detekt-baseline.xml
leakcanary-android-experimental/: build.gradle  gradle.properties
leakcanary-android-instrumentation/: build.gradle  build.gradle.kts  detekt-baseline.xml  gradle.properties
leakcanary-android-leak-deobfuscation-plugin/: build.gradle  gradle.properties
leakcanary-android-no-op/: build.gradle  gradle.properties
leakcanary-android-perflib/: build.gradle  gradle.properties
leakcanary-android-process/: build.gradle  build.gradle.kts  detekt-baseline.xml
leakcanary-android-proguard/: build.gradle  gradle.properties
leakcanary-android-release/: build.gradle  build.gradle.kts  gradle.properties
leakcanary-android-sample/: build.gradle  build.gradle.kts  detekt-baseline.xml
leakcanary-android-sample-tv/: build.gradle
leakcanary-android-startup/: build.gradle  build.gradle.kts
leakcanary-android-tv/: build.gradle  gradle.properties
leakcanary-android-utils/: build.gradle  build.gradle.kts
leakcanary-app/: build.gradle
leakcanary-app-aidl/: build.gradle  gradle.properties
leakcanary-app-service/: build.gradle  gradle.properties
leakcanary-cli/: build.gradle  gradle.properties
leakcanary-deobfuscation-gradle-plugin/: build.gradle  build.gradle.kts  gradle.properties
leakcanary-for-releases/: index.html
leakcanary-fragments-androidx/: build.gradle  gradle.properties
leakcanary-haha/: build.gradle  gradle.properties
leakcanary-hprof/: build.gradle
leakcanary-leaksentry/: build.gradle  gradle.properties
leakcanary-log/: build.gradle  gradle.properties
leakcanary-object-watcher/: build.gradle  build.gradle.kts  detekt-baseline.xml  gradle.properties
leakcanary-object-watcher-android/: build.gradle  build.gradle.kts  consumer-proguard-rules.pro  detekt-baseline.xml  gradle.properties
leakcanary-object-watcher-android-androidx/: build.gradle  build.gradle.kts  consumer-proguard-rules.pro
leakcanary-object-watcher-android-core/: build.gradle  build.gradle.kts  consumer-proguard-rules.pro  gradle.properties
leakcanary-object-watcher-android-startup/: build.gradle  build.gradle.kts  gradle.properties
leakcanary-object-watcher-android-support-fragments/: build.gradle  build.gradle.kts
leakcanary-sample/: build.gradle
leakcanary-sample-experimental/: build.gradle
leakcanary-sample-perflib/: build.gradle
leakcanary-support-fragment/: build.gradle  gradle.properties
leakcanary-watcher/: build.gradle
lint/: build.gradle
plumber-android-core/: build.gradle  build.gradle.kts
(+7782 files in other folders)
